katars/tests/snaps/snapshots/snap_errors__division_by_zero.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"let x = 1 / 0\")"
---
Error: division by zero
   ╭─[<test>:1:9]
   │
 1 │ let x = 1 / 0
   │         ┬───┬  
   │         ╰────── Int
   │             │  
   │             ╰── Int
───╯
